Fix color contrast issues

--- a/_sass/_settings/_colors.scss
+++ b/_sass/_settings/_colors.scss
@@ -15,7 +15,7 @@
   --color-primary-base: #4a9cd5;
   --color-primary-light: #8bd5ff;
 
-  --color-action-base: #ee5a62;
+  --color-action-base: #E71D27;
 
   --color-mono-black: #020402;
   --color-mono-muted: #e8fbff;
@@ -26,7 +26,7 @@
   --color-primary-dark: #8bd5ff;
   --color-primary-light: #31739c;
 
-  --color-action-base: #ff94b4;
+  --color-action-base: #ee5a62;
 
   --color-mono-black: #FFFEFC;
   --color-mono-muted: #04282e;
